# adminradius-infrastructure-module

./: .gitignore  Cargo.toml  Dockerfile  README.md  adminradius.postman_collection.json  arsitektur_en.md  db_init.js  env-example  file.txt  get-result.sh  migrate.js  package.json  result.txt  result2.txt  saran.txt  seed.js  specification_en.md  todo.txt
config/: app.config.js  default.json  root_ca.pem
connections/: mongodb_conn.js
docs/: 2025-12-24-infra.adminradius.com.json  2025-12-25-infra.adminradius.com.json  2025-12-26-infra.adminradius.com.json  2025-12-31-infra.adminradius.com.json  2026-1-5-infra.adminradius.com.json  ACTIVE_DEVICE_TOPOLOGY_FEATURE.md  DEVICE_FIRMWARE_FEATURE.md  DEVICE_FIRMWARE_SCRIPT_BUILD_FEATURE.md  DEVICE_SEARCH_FEATURE.md  DEVICE_TYPE_NULL_ISSUE_ANALYSIS.md  MIDDLEWARE_IMPLEMENTATION_GUIDE.md  MIDDLEWARE_IMPLEMENTATION_NOTES.md  OPENVPN_SERVER_SUBNET_FEATURE.md  PRIVATE_KEY_PASSPHRASE_FEATURE.md  RESPONSE_SECRET_DECRYPTION.md  ca_openvpn_implementation_notes.md  device_openvpn_client_implementation_notes.md  device_radius_client_implementation_notes.md  infrastructures.json  note_openvpn_server.txt  openapi-bundled.json  openvpn_client_implementation_notes.md  openvpn_server_implementation_plan.md  openvpn_server_workflow_notes.md  pkcs12-extraction-guide.md  radius_client_endpoint_implementation_notes.md  root_ca_embed_implementation.md
migrations/: 20240415_001_5_create_branches_collection.down.js  20240415_001_5_create_branches_collection.up.js  20240415_001_6_create_branch_access_collection.down.js  (+38 more)
scripts/: migrate.js  (+1 more)
(+286 files in other folders)
