[package]
name = "adminradius-infrastructure-service"
version = "1.0.0"
edition = "2024"
authors = ["AdminRadius Team"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.14", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }
uuid7 = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid", "json"] }
deadpool-redis = "0.15"
deadpool = "0.12"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bcrypt = "0.15"
sha2 = "0.10"
base64 = "0.22"
jsonwebtoken = "9"
futures = "0.3"
url = "2"
regex = "1"
urlencoding = "2"
